FIX: Span max-width 85% to prevent text overflow on arrow for mobile

--- a/app/design/frontend/HumanElement/stover_default/Magento_Catalog/web/css/source/_module_extend.less
+++ b/app/design/frontend/HumanElement/stover_default/Magento_Catalog/web/css/source/_module_extend.less
@@ -249,6 +249,7 @@
                     span {
                         display: block;
                         padding: 23px 0;
+                        max-width: 85%;
                     }
 
                     &:focus {
